# ParallelBFS

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bfs.cpp  bfs.h  bfsmultithreaded.cpp  bfsmultithreaded.h  edge.cpp  edge.h  graph.cpp  graph.h  randomgraphgenerator.cpp  randomgraphgenerator.h
